# oxyde-admin

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
example/: app.py  fixture.py
examples/falcon_example/: admin.py  app.py  auth.py  fixture.py  routes.py
examples/fastapi_example/: admin.py  app.py  auth.py  fixture.py  models.py  routes.py
examples/litestar_example/: admin.py  app.py  auth.py  fixture.py  models.py  routes.py
examples/quart_example/: admin.py  app.py  auth.py  fixture.py  models.py  routes.py
examples/sanic_example/: admin.py  app.py  auth.py  routes.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  main.js  router.js  utils.js
frontend/src/assets/layout/: _topbar.scss  _utils.scss
frontend/src/layout/: AppFooter.vue  AppLayout.vue  AppMenu.vue  AppMenuItem.vue  AppSidebar.vue  AppTopbar.vue
frontend/src/layout/composables/: layout.js  theme.js
frontend/src/views/: Dashboard.vue  Login.vue  ModelDetail.vue  ModelList.vue
oxyde_admin/: __init__.py  auth.py  config.py  exceptions.py  schema.py  site.py
oxyde_admin/adapters/: __init__.py  _falcon.py  _fastapi.py  _litestar.py  _quart.py  _sanic.py  base.py
oxyde_admin/api/: routes.py
tests/: conftest.py  test_admin_site.py  test_base_adapter.py  test_cast_pk.py  test_config.py  test_export.py  test_filters.py  test_routes.py  test_schema.py
tests/integration/: conftest.py  models.py  test_auth.py  test_config_models.py  test_crud.py  test_errors.py  test_exclude.py  test_limits.py  test_serialization.py
tests/unit/: conftest.py  test_admin_site.py  test_base_adapter.py  test_schema.py
