[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oxyde-admin"
version = "0.1.0"
description = "Admin interface for Oxyde ORM"
requires-python = ">=3.10"
dependencies = [
    "oxyde>=0.4.0",
]

[tool.setuptools.packages.find]
include = ["oxyde_admin*"]

[tool.setuptools.package-data]
oxyde_admin = ["static/**/*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "fastapi",
    "litestar",
    "sanic",
    "uvicorn",
    "pyjwt",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
